initial setup revised (folder structure)

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <script src = "https://code.angularjs.org/1.6.5/angular.js"></script>
     <script src="https://code.angularjs.org/1.6.5/angular-route.js"></script>
-    <script src= "module/module.js"></script>
-    <script src= "service/project-service.js"></script>
-    <script src= "components/home-page.js"></script>
-    <script src= "components/favorites-page.js"></script>
-    <script src= "components/results-list.js"></script>
-    <script src= "components/search-page.js"></script>
+    <script src= "app/module/module.js"></script>
+    <script src= "app/service/project-service.js"></script>
+    <script src= "app/components/home-page.js"></script>
+    <script src= "app/components/favorites-page.js"></script>
+    <script src= "app/components/results-list.js"></script>
+    <script src= "app/components/search-page.js"></script>
 </body>
 </html>
