--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel= "stylesheet" href= "styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
 </head>
 <body>
 
@@ -23,7 +24,7 @@
     <script src= "app/module/module.js"></script>
     <script src= "app/service/project-service.js"></script>
     <script src= "app/components/home-page.js"></script>
-    <script src= "app/components/favorites-page.js"></script>
+    <script src= "app/components/watchlist-page.js"></script>
     <script src= "app/components/results-list.js"></script>
     <script src= "app/components/search-page.js"></script>
 </body>
