--- a/index.html
+++ b/index.html
@@ -5,20 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title>Film Finder Home</title>
-
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel= "stylesheet" href= "styles.css">
-
-
-
     <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
-
-
 </head>
 
 <body>
@@ -28,20 +20,8 @@
     <a href="#!/search-page">Search</a>
     <a href="#!/results-list">Results</a>
 
-
-
     <ng-view></ng-view>
 
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
     <script src="https://code.angularjs.org/1.6.5/angular.js"></script>
     <script src="https://code.angularjs.org/1.6.5/angular-route.js"></script>
     <script src= "app/module/module.js"></script>
@@ -51,8 +31,7 @@
     <script src= "app/components/results-list.js"></script>
     <script src= "app/components/search-page.js"></script>
     <script src= "app/service/project-factory.js"></script>
-
-
+    <script src= "app/service/project-directive.js"></script>
 
 </body>
 
