--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Film Finder Home</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
     <link rel= "stylesheet" href= "styles.css">
@@ -15,10 +16,6 @@
 
 <body>
 
-    <a href="#!/home-page">Home</a>
-    <a href="#!/watchlist-page">Watchlist</a>
-    <a href="#!/search-page">Search</a>
-    <a href="#!/results-list">Results</a>
 
     <ng-view></ng-view>
 
@@ -32,6 +29,7 @@
     <script src= "app/components/search-page.js"></script>
     <script src= "app/service/project-factory.js"></script>
     <script src= "app/service/project-directive.js"></script>
+    <script src = "app/service/yellow-directive.js"></script>
 
 </body>
 
